# Decay-Library

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Commands.md  FAQ.md  LICENSE  README.md  TODO.md
docs/: README.md
docs/GoldSrc/: BSP.md  MAP.md  MDL.md  RMF.md  WAD.md
docs/Source/: FGD.md
lib/: CMakeLists.txt
linux/: install-mime.sh  uninstall-mime.sh
linux/mime/: goldsrc-bsp30.xml  goldsrc-fgd.xml  goldsrc-map.xml  goldsrc-rmf.xml  goldsrc-wad2.xml  goldsrc-wad3.xml
src/Decay/: Common.hpp  CommonReadUtils.hpp
src/Decay/Bsp/: BspFile.cpp  BspFile.hpp  BspParser.cpp  BspParser.hpp  BspTree.cpp  BspTree.hpp
src/Decay/Bsp/v30/: BspEntities.cpp  BspEntities.hpp  BspEntities_json.cpp  BspFile.cpp  BspFile.hpp  BspTree.cpp  BspTree.hpp  BspTree_json.cpp
src/Decay/Fdg/: FdgFile.cpp  FdgFile.hpp
src/Decay/Fgd/: FgdFile.cpp  FgdFile.hpp  FgdFile_json.cpp
src/Decay/Map/: MapFile.cpp  MapFile.hpp
src/Decay/Mdl/: MdlFile.cpp  MdlFile.hpp
src/Decay/Rmf/: RmfFile.cpp  RmfFile.hpp
src/Decay/Wad/: WadFile.cpp  WadFile.hpp  WadParser.cpp  WadParser.hpp
src/Decay/Wad/Wad3/: WadFile.cpp  WadFile.hpp
src_c_api/: bsp.cpp  bsp.h  bsp_entity.cpp  bsp_model.cpp  images.cpp  textures.cpp  utility.hpp  wad.cpp  wad.h
src_cmd/: main.cpp  main.hpp  main_bsp.cpp  main_fgd.cpp  main_map_rmf.cpp  main_wad.cpp  util.hpp
tests/: CMakeLists.txt
tests/bsp30_export_entities/: CMakeLists.txt  main.cpp
tests/bsp30_export_lightmap/: CMakeLists.txt  main.cpp
tests/bsp30_export_obj/: CMakeLists.txt  main.cpp
tests/bsp30_parse/: CMakeLists.txt  main.cpp
tests/bsp30_parse_c/: CMakeLists.txt  main.c
tests/bsp_export_obj/: CMakeLists.txt  main.cpp
tests/bsp_parse/: CMakeLists.txt  main.cpp
tests/bsp_parse_c/: CMakeLists.txt  main.c
tests/cmd/: CMakeLists.txt  test_entity.bsp  test_entity.fgd  test_map2rmf.map  test_rmf2map.rmf  test_wad.wad
tests/cmd_help/: CMakeLists.txt
tests/fgd_class_dependency/: CMakeLists.txt  main.cpp
tests/fgd_class_order/: CMakeLists.txt  main.cpp
tests/fgd_json/: CMakeLists.txt  file.fgd  main.cpp
tests/fgd_out_and_in/: CMakeLists.txt  main.cpp
tests/fgd_process_includes/: CMakeLists.txt  base.fgd  base2.fgd  main.cpp  main.fgd
tests/fgd_testfile/: CMakeLists.txt  base.fgd  file.fgd  main.cpp
tests/map_out_and_in/: CMakeLists.txt  main.cpp
tests/map_testfile/: CMakeLists.txt  main.cpp  test.map
tests/mdl_obj/: CMakeLists.txt  main.cpp
tests/mdl_testfile/: CMakeLists.txt  main.cpp
tests/rmf_out_and_in/: CMakeLists.txt  main.cpp
tests/rmf_testfile/: CMakeLists.txt  main.cpp  test.rmf
tests/wad3_export_fonts/: CMakeLists.txt  main.cpp
tests/wad3_export_images/: CMakeLists.txt  main.cpp
tests/wad3_export_textures/: CMakeLists.txt  main.cpp
tests/wad3_out_and_in/: CMakeLists.txt  main.cpp
tests/wad3_parse/: CMakeLists.txt  main.cpp
tests/wad3_parse_all/: CMakeLists.txt  main.cpp
tests/wad3_parse_c/: CMakeLists.txt  main.cpp
tests/wad3_test_font/: CMakeLists.txt  main.cpp
tests/wad3_test_image/: CMakeLists.txt  main.cpp
tests/wad3_test_texture/: CMakeLists.txt  main.cpp
tests/wad_export_fonts/: CMakeLists.txt  main.cpp
tests/wad_export_textures/: CMakeLists.txt  main.cpp
tests/wad_parse/: CMakeLists.txt  main.cpp
tests/wad_parse_all/: CMakeLists.txt  main.cpp
tests/wad_parse_c/: CMakeLists.txt  main.cpp
tests/wad_test_font/: CMakeLists.txt  main.cpp
tests/wad_test_image/: CMakeLists.txt  main.cpp
tests/wad_test_texture/: CMakeLists.txt  main.cpp
